/*

***********************************************************************************
* Copyright (C) 2018 - 2020, BlockSettle AB
* Distributed under the GNU Affero General Public License (AGPL v3)
* See LICENSE or http://www.gnu.org/licenses/agpl.html
*
**********************************************************************************

*/
syntax = "proto3";

package Blocksettle.AuthServer;

enum PacketType
{
   Invalid = 0;
   GetKeyRequestType = 1;
   GetKeyResponseType = 2;
   GetKeyCancelMessageType = 3;
}

message Packet
{
   PacketType type = 1;
   bytes data = 2;
}

message GetKeyRequest
{
   fixed64 tag = 1;
   string email = 2;
   string walletId = 3;
   bytes publicKey = 4;
   bool newWallet = 5;
}

message GetKeyResponse
{
   fixed64 tag = 1;
   bytes encryptedKey = 2;
   int32 deviceId = 3;
}

message GetKeyCancelMessage
{
   fixed64 tag = 1;
   string email = 2;
   string walletId = 3;
}
